--- a/graphql_flask/graphql/templates/index.html
+++ b/graphql_flask/graphql/templates/index.html
@@ -11,7 +11,7 @@
     <p>Selecciona una opción:</p>
     <ul>
         <br><br>
-        <li><a href="departamento.html">Consulta por Departamento</a></li>
+        <li><a href="consulta.html">Consulta por Departamento</a></li>
         <br>
         <li><a href="mapa.html">Mapa</a></li>
     </ul>
