--- a/graphql_flask/graphql/templates/mapa.html
+++ b/graphql_flask/graphql/templates/mapa.html
@@ -15,7 +15,7 @@
         }
 
         .contenedor-imagen {
-            margin-top: 20px; /* Ajusta el espacio superior según tus necesidades */
+            margin-top: 20px;
         }
 
         img {
