--- a/graphql_flask/graphql/templates/mapa.html
+++ b/graphql_flask/graphql/templates/mapa.html
@@ -28,8 +28,8 @@
 </head>
 <body>
     <div class="contenedor-imagen">
-        <img src="Mapa.png" alt="Mapa de colores">
+        <img src="graphql_flask\graphql\static\images\Mapa.png" alt="Mapa de colores">
     </div>
-    <a href="index.html">Volver a la Página Principal</a>
+    <a href="/index">Volver a la Página Principal</a>
 </body>
 </html>
