--- a/graphql_flask/graphql/templates/consulta.html
+++ b/graphql_flask/graphql/templates/consulta.html
@@ -55,19 +55,19 @@
                     <option value="guainia">Guainía</option>
                     <option value="guaviare">Guaviare</option>
                     <option value="huila">Huila</option>
-                    <option value="la_guajira">La Guajira</option>
+                    <option value="la guajira">La Guajira</option>
                     <option value="magdalena">Magdalena</option>
                     <option value="meta">Meta</option>
                     <option value="narino">Nariño</option>
-                    <option value="norte_de_santander">Norte de Santander</option>
+                    <option value="norte de santander">Norte de Santander</option>
                     <option value="putumayo">Putumayo</option>
                     <option value="quindio">Quindío</option>
                     <option value="risaralda">Risaralda</option>
-                    <option value="san_andres_y_providencia">San Andrés y Providencia</option>
+                    <option value="san andres">San Andrés y Providencia</option>
                     <option value="santander">Santander</option>
                     <option value="sucre">Sucre</option>
                     <option value="tolima">Tolima</option>
-                    <option value="valle_del_cauca">Valle del Cauca</option>
+                    <option value="valle del cauca">Valle del Cauca</option>
                     <option value="vaupes">Vaupés</option>
                     <option value="vichada">Vichada</option>
                 </select>                
