--- a/graphql_flask/graphql/templates/dpto.html
+++ b/graphql_flask/graphql/templates/dpto.html
@@ -122,7 +122,7 @@
                             Cada barra representa una característica, como "Barreras Acceso Salud", "Trabajo Infantil", "Paredes", etc. La altura de cada barra indica la magnitud
                             de la privación asociada a esa variable en el hogar.
                         </p>
-                        <a class="btn btn-secondary" href="#" role="button">Buscar otro departamento</a>
+                        <a class="btn btn-secondary" href="/consulta" role="button">Buscar otro departamento</a>
                     </div>
                 </div>
             </div>
