--- a/graphql_flask/graphql/templates/mapa.html
+++ b/graphql_flask/graphql/templates/mapa.html
@@ -16,8 +16,8 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #262933; /* Fondo oscuro */
-            color: #fff; /* Texto blanco */
+            background-color: #262933;
+            color: #fff;
             font-family: 'Roboto', sans-serif;
         }
 
